@@ -8,6 +8,7 @@
 #endif
 
 static struct option long_options[] = {
+    { "async", 0, NULL, 'a' },    
     { "daemonize", 0, NULL, 'B' },
 #ifdef HAVE_KLOGCTL
     { "consolelevel", 1, NULL, 'c' },
@@ -15,6 +16,7 @@ static struct option long_options[] = {
     { "help", 0, NULL, 'h' },
     { "pidfile", 1, NULL, 'p' },
     { "synchronous", 0, NULL, 's' },
+    { "sync", 0, NULL, 's' },    
     { NULL, 0, NULL, 0 }
 };
 
@@ -27,7 +29,7 @@ static int console_level = DEFAULT_CONSOLE_LEVEL;
 #endif
 static pid_t child;
 static pid_t command_child;
-static sig_atomic_t synchronous;
+static sig_atomic_t synchronous = (sig_atomic_t) 1;
 static signed char daemonize;
 static const char *pid_file = DEFAULT_PID_FILE;
 
